third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-tests/borrowed_before_last_usage.exp
script {
    entry fun <SELF>_0() {
        if (!(*&0 == 0)) abort 0;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ borrowed_before_last_usage.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
